Update authentication configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-COGNITO_CLIENT_ID=
-COGNITO_USER_POOL_ID=
-COGNITO_ISSUER=
-COGNITO_CLIENT_SECRET=
+AUTH_COGNITO_ID=
+AUTH_COGNITO_ISSUER=
+AUTH_COGNITO_SECRET=
 
 AUTH_SECRET=
-NEXTAUTH_SECRET=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
