--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 AUTH_COGNITO_ID=
-AUTH_COGNITO_ISSUER=
 AUTH_COGNITO_SECRET=
-
+AUTH_COGNITO_ISSUER=
 AUTH_SECRET=
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AMAZON_KEY_ID=
+AMAZON_KEY_SECRET=
